--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="assets/vitla.jpg" height="100" class="projects-author-avatar">
     <h1 class="projects-author-info">
       <strong>Виталий Кулешин</strong><br>
-      Личные проекты<br>
+      Персональные проекты<br>
       mr-woodman.ru<br>
     </h1>
   </a>
