еще раз термины поправить

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Мои проекты</title>
+  <title>Виталий Кулешин — проекты</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,700;1,400;1,700&family=Alice&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <img src="assets/vitla.jpg" height="100" class="projects-author-avatar">
     <h1 class="projects-author-info">
       <strong>Виталий Кулешин</strong><br>
-      Персональные проекты<br>
+      Проекты<br>
       mr-woodman.ru<br>
     </h1>
   </a>
