--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <header class="project-header">
           <a href="" target="_blank">
             <div class="project-media">
-              <img src="assets/skoblimora-02.png" height="200">
+              <img src="assets/skoblimora.png" height="200">
             </div>
             <h2 class="project-title">Skoblimora</h2>
             <p class="project-subtitle">Алхимический помощник для Skyrim, Oblivion и Morrowind</p>
