--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
   <link href="assets/my-projects.css" rel="stylesheet">
 </head>
 <body>
+  <!-- Nav -->
+  <div class="app-nav">
+    <a href="https://mr-woodman.ru" target="_blank" class="app-nav__home">На главную</a>
+  </div>
 
-  <!-- Author -->
-  <a href="https://mr-woodman.ru" target="_blank" class="projects-author">
-    <img src="assets/vitla.jpg" height="100" class="projects-author-avatar">
-    <h1 class="projects-author-info">
-      <strong>Виталий Кулешин</strong><br>
-      Проекты<br>
-      mr-woodman.ru<br>
-    </h1>
-  </a>
+  <!-- Content -->
+  <main class="app-content">
+    <!-- Author -->
+    <div class="projects-author">
+      <img src="assets/vitla.jpg" height="100" class="projects-author__avatar">
+      <div class="projects-author__info">
+        <strong>Виталий Кулешин</strong><br>
+        <a href="mailto:antivitla@yandex.ru" target="_blank" class="email">antivitla@yandex.ru</a><br>
+        Проекты
+      </div>
+    </div>
 
-  <main id="app">
+    <!-- Projects -->
     <ul class="projects">
-
       <!-- Heroes -->
       <li class="project wide">
         <header class="project-header">
@@ -31,7 +36,7 @@
             <div class="project-media">
               <img src="assets/heroes.png" height="200" style="filter: invert(1)">
             </div>
-            <h2 class="project-title">Герои России</h2>
+            <h2 class="project-title">Герои России 🇷🇺</h2>
             <p class="project-subtitle">Специальная военная операция на Украине</p>
           </a>
         </header>
@@ -127,9 +132,12 @@
         </main>
       </li>
 
+      <!-- Minota -->
       <li class="project">
         <header class="project-header">
-            <div class="project-media"></div>
+            <div class="project-media">
+              <span class="project-icon">📖</span>
+            </div>
           <h2 class="project-title">Minota</h2>
           <p class="project-subtitle">Сервис заметок</p>
         </header>
@@ -141,9 +149,11 @@
       </li>
     </ul>
 
+    <!-- Github -->
     <p class="projects-more">Остальное на <a href="https://github.com/antivitla" target="_blank"><strong>github.com/antivitla</strong></a></p>
   </main>
 
+  <!-- Footer -->
   <footer class="app-footer">
     <a class="app-footer__artist" href="http://www.grekovstudio.ru/artists/now/potogin-vyacheslav-vladimirovich" target="_blank" title="Открыть страницу художника на сайте студии">
       <div>
@@ -154,6 +164,5 @@
       <img src="assets/grekov-logo.png" class="app-footer__mascot">
     </a>
   </footer>
-
 </body>
 </html>
