--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Heroes -->
       <li class="project wide">
         <header class="project-header">
-          <a href="https://mr-woodman.ru/heroes" target="_blank">
+          <a href="https://mr-woodman.ru/heroes" target="_blank" title="Перейти к Героям России">
             <div class="project-media">
               <img src="assets/heroes.png" height="200" style="filter: invert(1)">
             </div>
@@ -53,7 +53,7 @@
       <!-- Titamota -->
       <li class="project">
         <header class="project-header">
-          <a href="https://mr-woodman.ru/titamota" target="_blank">
+          <a href="https://mr-woodman.ru/titamota" target="_blank" title="Перейти на Titamóta">
             <div class="project-media">
               <img src="assets/titamota.svg" height="150">
             </div>
@@ -74,7 +74,7 @@
       <!-- Bodysize -->
       <li class="project">
         <header class="project-header">
-          <a href="https://mr-woodman.ru/bodysize" target="_blank">
+          <a href="https://mr-woodman.ru/bodysize" target="_blank" title="Перейти к подбору типовой фигуры">
             <div class="project-media">
               <img src="assets/bodysize.png" height="150">
             </div>
@@ -95,7 +95,7 @@
       <!-- Books -->
       <li class="project wide" data-project-key="books">
         <header class="project-header">
-          <a href="https://books.antivitla.ru" target="_blank">
+          <a href="https://books.antivitla.ru" target="_blank" title="Перейти к набору книг в читалке">
             <div class="project-media">
               <img src="assets/books.jpg" height="150">
             </div>
@@ -117,7 +117,7 @@
       <!-- Skoblimora -->
       <li class="project wide">
         <header class="project-header">
-          <a href="" target="_blank">
+          <a href="https://mr-woodman.ru/skoblimora" target="_blank" title="Перейти к Алхимическому помощнику">
             <div class="project-media">
               <img src="assets/skoblimora.png" height="200">
             </div>
@@ -129,22 +129,32 @@
           <p>Вот идешь по предгорьям <del>Северного Кавказа</del> Skyrim'а, собираешь ингредиенты. Каких нужно собрать побольше, а какие нужны лишь для прокачки алхимии?</p>
           <p>Или ситуация целеполагания — нужно найти не просто полезные рецепты, а убойные комбинации, например, урона от яда вместе с повышением уязвимости к яду.</p>
           <p><em>Это интересная математическая задача поиска полезных пересечений связанных по смыслу массивов данных.</em></p>
+          <ul>
+            <li><a href="https://mr-woodman.ru/skoblimora" target="_blank">mr-woodman.ru/skoblimora</a></li>
+          </ul>
         </main>
       </li>
 
       <!-- Minota -->
       <li class="project">
         <header class="project-header">
+          <a href="https://github.com/antivitla/minota-ui" target="_blank" title="Перейти к фронтенд-коду Minota">
             <div class="project-media">
               <span class="project-icon">📖</span>
             </div>
-          <h2 class="project-title">Minota</h2>
-          <p class="project-subtitle">Сервис заметок</p>
+            <h2 class="project-title">Minota</h2>
+            <p class="project-subtitle">Сервис заметок</p>
+          </a>
         </header>
         <main class="project-description">
           <p>Долгострой мечты.</p>
           <p>Каждый кодер должен построить дом, посадить дерево и написать сервис заметок. Много мыслей, кода и прототипов, но очень с трудом нащупывается путь к цели.</p>
           <p>Однажды будет.</p>
+          <ul>
+            <li><a href="https://github.com/antivitla/minota-ui" target="_blank">Minota UI</a></li>
+            <li><a href="https://github.com/antivitla/minota-server" target="_blank">Minota Server</a></li>
+            <li><a href="https://github.com/antivitla/minota-cli" target="_blank">Minota CLI</a></li>
+          </ul>
         </main>
       </li>
     </ul>
